# business-ar

./: .gitignore  codecov.yaml
.github/: CODEOWNERS
.github/DISCUSSION_TEMPLATE/: RFCs.yml
.github/workflows/: business-ar-PAY-CD.yaml  business-ar-PAY-CI.yaml  business-ar-admin-ui-cd.yaml  business-ar-admin-ui-ci.yaml  business-ar-api-cd.yaml  business-ar-api-ci.yaml  business-ar-business-sync-cd.yaml  business-ar-business-sync-ci.yaml  business-ar-process-paid-filings-cd.yaml  business-ar-process-paid-filings-ci.yaml  business-ar-reminder-cd.yaml  business-ar-reminder-ci.yaml  business-ar-ui-cd.yaml  business-ar-ui-ci.yaml  integration-test.yaml
api/: .env.sample  pyproject.toml  wsgi.py
api/.devcontainer/: docker-compose.yml
api/devops/: vaults.env  vaults.gcp.env
api/devops/gcp/: clouddeploy-targets.yaml  clouddeploy.yaml
api/report-templates/: bcAnnualReport.html
api/report-templates/template-parts/common/: businessDetails.html  style.html
api/src/business_ar_api/: __init__.py  config.py
api/src/business_ar_api/common/: auth.py  enum.py  flags.py
api/src/business_ar_api/email_templates/: BC-AR-PAID.html
api/src/business_ar_api/exceptions/: exceptions.py  responses.py
api/src/business_ar_api/models/: __init__.py  ar_reminder.py  base_model.py  business.py  colin_event_id.py  filing.py  invitations.py  user.py
api/src/business_ar_api/resources/: __init__.py  accounts.py  base.py  business.py  documents.py  filing.py  internal.py  invitation.py  meta.py  reports.py  user.py
api/src/business_ar_api/schemas/: utils.py
api/src/business_ar_api/schemas/business-ar/: components.json  new_account.json
api/src/business_ar_api/services/: __init__.py  account_service.py  ar_reminder_service.py  auth.py  auth_service.py  business_service.py  filing_service.py  invitation_service.py  notification_service.py  payment_service.py  report_service.py  rest_service.py  schema_service.py
api/src/business_ar_api/utils/: corps_metadata.py  legislation_datetime.py  registrar_metadata.py  user_context.py
api/tests/: __init__.py  conftest.py
api/tests/postman/: business-ar-api.postman_collection.json
api/tests/unit/: __init__.py
api/tests/unit/models/: test_business.py
api/tests/unit/resources/: test_business.py  test_meta.py
jobs/ar-reminder/: Dockerfile  pyproject.toml  run.sh
jobs/ar-reminder/devops/: vaults.gcp.env
jobs/business-sync/: .env.sample  Dockerfile  pyproject.toml  run.sh
jobs/business-sync/devops/: vaults.gcp.env
jobs/process_paid_filings/: .env.sample  Dockerfile  config.py  process_paid_filings.py  pyproject.toml  run.sh
ops/notebooks/: Business-AR-cohort-2.ipynb  Business-AR-cohort-3.ipynb  Business-AR-cohort-4.ipynb  Business-AR-cohort-5.ipynb  Business-AR-cohort-6.ipynb  Business-AR-cohort-7.ipynb  Business-AR-loader.ipynb  Business-AR-posttest.ipynb  Business-AR.ipynb  README.md  requirements.txt
ops/notebooks/.devcontainer/: Dockerfile
queue_services/business-ar-pay/: Dockerfile  pyproject.toml
terraform/: docker.tf  postgres.tf  terraform.tfvars.example  vars.tf
test/terraform/: docker.tf  network.tf  terraform.tfvars.example  vars.tf
web/admin/: README.md  app.config.ts  app.vue  firebase.json  nuxt.config.ts  package.json  pnpm-lock.yaml
web/site/: .env.sample  .gitignore  README.md  app.config.ts  app.vue  firebase.json  nuxt.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
(+163 files in other folders)
